--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -18,8 +18,8 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
-      - name: automerge
-        uses: "pascalgn/automerge-action@7854d3bd607dccdaf0b2c134b699a812c8960213"
+      - name: Merge pull requests
+        uses: "pascalgn/automerge-action@v0.7.3"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "automerge,ReadyForMerge"
