--- a/.github/auto-merge.yml
+++ b/.github/auto-merge.yml
@@ -13,7 +13,7 @@ maxRequestedChanges:
 mergeCommitMessage: |
   {testmerge} (#{13})
   {test the automerge process}
-  
+
 blockingLabels:
 - blocked
 
@@ -22,3 +22,5 @@ blockingLabels:
 rules:
 - minApprovals:
     OWNER: 1
+- requiredLabels:
+  - ReadyToMerge    
